# autocaller

./: .gitignore  README.md  ROADMAP.md  STRIPE_SETUP.md  docker-compose.yml  ideas.md  main.py  pyproject.toml  venues.csv  verify_emails.py
backend/: .env.example  README.md  alembic.ini  pyproject.toml  test_email.py
backend/alembic/: env.py
backend/app/: config.py  db.py  main.py
backend/app/routers/: auth.py  billing.py  forms.py  inbox.py  mode.py  outreach.py  test_send.py  venues.py
backend/app/services/: email_provider.py  plans.py
backend/app/templates/: outreach.html  outreach_en.html
backend/db/: seed_venues.py
db/forms/: README.md  au_jardin_des_saules.json  beaumarchais_manor.json  chateau_barthelemy.json  chateau_de_bouffemont.json  chateau_de_boury.json  chateau_de_champlatreux.json  chateau_de_chaumontel.json  chateau_de_janvry.json  chateau_de_lesigny.json  chateau_de_lhermitage.json  chateau_de_maudetour.json  chateau_de_meridon.json  chateau_de_montgeroult.json  chateau_de_santeny.json  chateau_de_sereville.json  chateau_des_bondons.json  chateau_dhazeville.json  chateau_dhenonville.json  chateau_du_breuil.json  chateau_du_vivier.json  domaine_de_la_beauvoisiere.json  domaine_de_la_corniche.json  domaine_de_la_roche_couloir.json  domaine_de_la_vallee_aux_pages.json  (+29 more)
frontend/: auth.js  index.html  landing.html  legal.html  onboarding.html  pricing.html  privacy.html  settings.html  terms.html  theme.css
scripts/: analyze_screenshots.py  models.py  scrape_contacts.py  scrape_photos.py  seed_venues.py  utils.py  verify_emails.py
