[project]
name = "autocaller"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dnspython>=2.8.0",
    "google-genai>=2.8.0",
    "pillow>=12.2.0",
    "playwright>=1.60.0",
    "python-dotenv>=1.2.2",
]
